# thufs

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.en.md  README.md
.github/workflows/: ci.yml  publish-crate.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-foundation-and-command-contract/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VALIDATION.md
.planning/phases/02-listing-and-transfer-core/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-VALIDATION.md
.planning/phases/03-share-workflow/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
scripts/: e2e-local.sh
src/: config.rs  contract.rs  main.rs  output.rs  seafile.rs  transfer.rs
src/app/: account_service.rs  auth_service.rs  create_service.rs  list_service.rs  mod.rs  pull_service.rs  push_service.rs  share_service.rs
src/cli/: auth.rs  config.rs  info.rs  list.rs  mkdir.rs  mkrepo.rs  mod.rs  pull.rs  push.rs  repos.rs  root.rs  share.rs  shares.rs  unshare.rs
tests/: cli_contract.rs  cli_create.rs  cli_info.rs  cli_listing.rs  cli_pull.rs  cli_push.rs  cli_repos.rs  cli_share.rs
(+8 files in other folders)
