[package]
name = "thufs"
version = "0.1.9"
edition = "2024"
rust-version = "1.85"
description = "Shell-first THU Cloud Drive CLI"
license = "MIT"
repository = "https://github.com/class-undefined/thufs"
readme = "README.md"
keywords = ["thufs", "seafile", "cli", "tsinghua", "cloud-drive"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
indicatif = "0.17"
reqwest = { version = "=0.12.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
# Keep cargo install on Rust 1.85 from resolving url/idna to newer ICU-backed releases.
url = "=2.5.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.15"
